# parallel-flow-cells

./: README.md  config.yaml  pyproject.toml  test.ipynb
firmware/loadcell_board/: platformio.ini
firmware/loadcell_board/src/: ble.cpp  leds.cpp  leds.h  loadcells.cpp  loadcells.h  main.cpp  storage.cpp  storage.h
firmware/mea-co2-controller/: platformio.ini
firmware/mea-co2-controller/src/: ble.h  led_animations.cpp  main.cpp  sensirion.cpp  sensirion.h
firmware/pump-controller/: platformio.ini
firmware/pump-controller/src/: led_animations.h  main.cpp
part_files/: ANODE_PLATE_TI - REV1.step  CATHODE_PLATE_TI - REV1.step  H-Cell - Counter Cell.step  H-Cell - Counter Lid.step  H-Cell - Sample Holder.step  H-Cell - Sample Press.step  H-Cell - Working Cell.step  H-Cell - Working Lid.step
pcb_files/: esp_mini_loadcell_jlcpcb.csv  esp_mini_loadcell_positions_jlcpcb.csv  sdl_motor_board_jlcpcb.csv  sdl_motor_board_positions_jlcpcb.csv
src/: controller.py  experiment.py  load_cells.py  mfc_board.py  pump_board.py
